<resources>
    <string name="job_statistics"> <u>Job Statistics</u> </string>
    <string name="my_daily_activities">My Daily Activities</string>
    <string name="search_other_activities">Search Other Activities</string>
    <string name="task_management">Task Management</string>
    <string name="job_management">Job Management</string>
    <string name="contacts">Contacts</string>
    <string name="available_task">Available Task</string>
    <string name="see_all">See All</string>
    <string name="most_used_tasks">Most Used Tasks</string>
    <string name="app_name">Jobtrack</string>
    <string name="text_employee_id">Employee Id</string>
    <string name="text_employee_name">Name</string>
    <string name="text_employee_email">Email</string>
    <string name="text_password">Password</string>
    <string name="pager_title_shopping_lists">Shopping Lists</string>
    <string name="pager_title_meals">Meals</string>
    <string name="remove_item_option">Remove Item</string>
    <string name="positive_button_create">Create</string>
    <string name="title_activity_update_account">update</string>
    <string name="text_you">You</string>
    <string name="text_edit_profile">Edit profile</string>
    <string name="text_change_password">Change Password</string>
    <string name="text_set_password">Set or Forget Password</string>
    <string name="text_current_password">Current Password</string>
    <string name="text_new_password">New Password</string>
    <string name="text_confirm_new_password">Confirm New Password</string>
    <string name="button_ok">Ok</string>
    <string name="text_employee_gender">Gender</string>
    <string name="text_employee_institute">Institute</string>
    <string name="text_employee_department">Department</string>
    <string name="text_employee_date_of_birth">Date of Birth</string>
    <string name="text_employee_marital_status">Marital Status</string>
    <string name="text_employee_blood_group">Blood Group</string>
    <string name="text_employee_im">IM</string>
    <string name="text_employee_religion">Religion</string>
    <string name="text_employee_mobile">Mobile</string>
    <string name="text_employee_office_phone">Office Phone</string>
    <string name="log_error_updating_data">Error updating data: </string>
    <string name="log_error_the_read_failed">The read failed: </string>
    <string name="log_error_occurred">"Error occurred: "</string>
    <string name="action_logout">Logout</string>
    <string name="action_share_list">Share List</string>
    <string name="action_sort">Sort</string>
    <string name="action_remove_list">Remove list</string>
    <string name="action_archive">Archive</string>
    <string name="hint_add_shopping_list">Create a list</string>
    <string name="created_by">Created by </string>
    <string name="person_shopping">%d person shopping</string>
    <string name="people_shopping">%d people shopping</string>
    <string name="title_activity_list_details">List Details</string>
    <string name="action_edit_list_name">Edit list name</string>
    <string name="positive_button_add_list_item">Add item</string>
    <string name="positive_button_edit_item">Edit name</string>
    <string name="negative_button_cancel">Cancel</string>
    <string name="dialog_message_are_you_sure_remove_list">Are you sure you want to remove this list?</string>
    <string name="dialog_message_are_you_sure_remove_item">Are you sure you want to remove this item?</string>
    <string name="button_stop_shopping">Stop Shopping</string>
    <string name="button_start_shopping">Start Shopping</string>
    <string name="text_you_are_shopping">You are shopping</string>
    <string name="text_you_and_other_are_shopping">You and %s are shopping</string>
    <string name="text_you_and_number_are_shopping">You and %d others are shopping</string>
    <string name="text_other_is_shopping">%s is shopping</string>
    <string name="text_other_and_other_are_shopping">%1$s and %2$s are shopping</string>
    <string name="text_other_and_number_are_shopping">%1$s and %2$d others are shopping</string>
    <string name="bought_by">Bought by</string>
    <string name="title_activity_meal_details">Meal Details</string>
    <string name="title_activity_add_items_from_meal">Add Meal</string>
    <string name="hint_add_meal">Create a meal</string>
    <string name="dialog_title_remove_meal">Remove meal</string>
    <string name="dialog_message_are_you_sure_remove_meal">Are you sure you want to remove this meal?</string>
    <string name="hint_enter_meal_name">Enter meal name</string>
    <string name="title_activity_archived_lists">Archived Lists</string>
    <string name="title_activity_archived_list_details">Archived List Details</string>
    <string name="dialog_title_copy_list">Copy List</string>
    <string name="dialog_title_archive_list">Archive list</string>
    <string name="dialog_message_are_you_sure_archive_list">Are you sure you want to archive this list?</string>
    <string name="dialog_message_do_you_want_to_copy">Do you want to copy this list?</string>
    <string name="toast_shopping_list_was_archived">Shopping List %s was archived.</string>
    <string name="button_footer_archived_lists">Archived Lists</string>
    <string name="title_activity_create_account">Create Account</string>
    <string name="text_dont_have_account">Don\'t have an account?</string>
    <string name="text_already_have_account">Already have an account?</string>
    <string name="button_create_account">Sign Up</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_signin_with_google">SIGN IN WITH GOOGLE</string>
    <string name="button_signin_with_password">SIGN IN</string>
    <string name="button_got_to_edit_user">Go to Profile Update</string>
    <string name="hint_enter_email">Enter your email</string>
    <string name="hint_enter_employee_id">Enter your User Id</string>
    <string name="hint_enter_employeename">Enter your name</string>
    <string name="hint_enter_password">Enter password</string>
    <string name="hint_enter_date_of_birth">Select Your Date of Birth</string>
    <string name="hint_enter_im">Enter Your IM</string>
    <string name="hint_enter_mobile_number">Enter Your Mobile Number</string>
    <string name="hint_enter_office_phone">Enter Your Office Phone</string>
    <string name="image_view_logo_image">Logo Image</string>
    <string name="text_forget_password">Forgot Password?</string>
    <string name="progress_dialog_loading">Loading…</string>
    <string name="progress_dialog_authenticating_with_firebase">Authenticating with Firebase…</string>
    <string name="progress_dialog_creating_user_with_firebase">Attempting to create account…</string>
    <string name="progress_dialog_check_inbox">Please check your inbox for your password</string>
    <string name="dialog_title_error">Error</string>
    <string name="error_message_failed_sign_in_no_network">There was a problem with the network connection.\nAre you sure you\'re connected to the internet?</string>
    <string name="log_error_invalid_provider">"Invalid provider: "</string>
    <string name="log_error_failed_to_change_password">"Failed to change the password: "</string>
    <string name="error_invalid_email_not_valid">%s is not a valid email</string>
    <string name="error_message_email_issue">There was an error with your email; please check that you entered it correctly.</string>
    <string name="error_you_didnt_give_permissions">You must give ShoppingList++ permission to access your Google account information if you want to use Google sign-in.</string>
    <string name="error_email_taken">The email is already taken.</string>
    <string name="error_invalid_password_not_valid">Please enter a password that is at least 6 characters long.</string>
    <string name="error_cannot_be_empty">This cannot be empty.</string>
    <string name="google_error_recoverable_oauth_error">"Recoverable Google OAuth error: "</string>
    <string name="google_error_google_play_services_not_available">Google Play Services are not available.</string>
    <string name="google_error_trying_to_connect_google_api">Trying to connect to Google API</string>
    <string name="google_error_auth_with_google">"Error authenticating with Google: "</string>
    <string name="google_error_network_error">"Network error: "</string>
    <string name="google_error_cant_connect_to_api">Are you sure that you set up a project for your app?
        Check out : https://console.developers.google.com/project. Also make sure you have all the proper
    gradle dependencies</string>
    <string name="oauth2_format">oauth2:%s</string>
    <string name="log_message_password_changed_successfully">Password changed successfully from temporary password to </string>
    <string name="log_message_auth_successful">auth successful.</string>
    <string name="title_activity_share_list">Share List</string>
    <string name="title_activity_add_friend">Add Friend</string>
    <string name="hint_enter_friends_email">Enter your friend\'s email</string>
    <string name="text_add_friend">Add New Friend</string>
    <string name="toast_is_already_your_friend">%s is already your friend!</string>
    <string name="toast_you_cant_add_yourself">You can\'t add yourself as a friend.</string>
    <string name="action_settings">Settings</string>
    <string name="pref_title_sort_lists">Lists ordering</string>
    <string name="pref_name_sort_order_lists">pref_sort_order_lists</string>
    <string name="pref_sort_list_label_sortType">Order by</string>
    <string name="pref_sort_list_label_publish_time_entry">Publish Time</string>
    <string name="pref_sort_list_label_list_name_entry">List Name</string>
    <string name="pref_sort_list_label_owner_entry">Owner Email</string>
    <string name="pref_sort_list_label_most_recently_changed_entry">Most Recently Changed</string>
    <string-array name="employee_gender">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>
    <string-array name="employee_institute">
        <item>Daffodil</item>
        <item>DIU</item>
        <item>DCL</item>
    </string-array>
    <string-array name="employee_department">
        <item>CSE</item>
        <item>EEE</item>
        <item>SWE</item>
        <item>English</item>
        <item>IT</item>
        <item>ETE</item>
    </string-array>
    <string-array name="employee_marital_status">
        <item>Married</item>
        <item>Single</item>
        <item>divorces</item>
    </string-array>
    <string-array name="employee_blood_group">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>
    <string-array name="employee_religion">
        <item>Islam</item>
        <item>Hindu</item>
    </string-array>
    <string name="title_activity_tabed">TabedActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_settings_activity_tab">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
</resources>