<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="bd.edu.httpdaffodilvarsity.jobtrack.ui.login.ProfileViewActivity">


<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

   <LinearLayout
       android:layout_width="347dp"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:paddingBottom="20dp"
       android:weightSum="1">

       <ImageView
           android:layout_width="140dp"
           android:layout_height="140dp"
           android:src="@drawable/avatar" />

       <Button
           android:layout_width="wrap_content"
           android:layout_height="50dp"
           android:textStyle="bold"

           style="@style/Widget.Udacity.Button.Login"
           android:padding="5dp"
           android:textColor="@android:color/white"
           android:background="@color/primary"
           android:text="@string/text_edit_profile"
           android:layout_margin="@dimen/edit_text_padding"
           android:id="@+id/buttonEditPersonalProfile"
           android:onClick="GoToEditUser"

           android:textSize="@dimen/btn_shopping_height" />


   </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:orientation="horizontal">

        <TextView
            android:text="@string/text_employee_name"
            android:textSize="@dimen/list_item_text_size"
            android:textColor="@android:color/black"
            android:layout_width="0dp"
            android:paddingRight="15dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2" />

        <TextView
            android:hint="Mahmudul"
            android:textSize="@dimen/list_item_text_size"
            android:id="@+id/text_profile_view_name"
            android:layout_width="0dp"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/text_employee_institute"
            android:textSize="@dimen/list_item_text_size"
            android:layout_width="0dp"
            android:textStyle="bold"
            android:paddingRight="15dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2" />

        <TextView
            android:hint="Daffodil International University"
            android:textSize="@dimen/list_item_text_size"
            android:id="@+id/text_profile_view_institute"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_weight="2"  />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/text_employee_department"
            android:textSize="@dimen/list_item_text_size"
            android:layout_width="0dp"
            android:textStyle="bold"
            android:paddingRight="15dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2" />

        <TextView
            android:hint="IT"
            android:textSize="@dimen/list_item_text_size"
            android:id="@+id/text_profile_view_department"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_weight="2" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/text_employee_date_of_birth"
            android:textSize="@dimen/activity_horizontal_margin"
            android:layout_width="0dp"
            android:textStyle="bold"
            android:paddingRight="15dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2" />

        <TextView
            android:hint="12/12/1992"
            android:textSize="@dimen/list_item_text_size"
            android:id="@+id/text_profile_view_dateOfBirth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/text_employee_gender"
            android:textSize="@dimen/activity_horizontal_margin"
            android:layout_width="0dp"
            android:textStyle="bold"
            android:paddingRight="15dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2" />

        <TextView
            android:hint="Male"
            android:textSize="@dimen/list_item_text_size"
            android:id="@+id/text_profile_view_gender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/text_employee_marital_status"
            android:textSize="@dimen/activity_horizontal_margin"
            android:layout_width="0dp"
            android:textStyle="bold"
            android:paddingRight="15dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2" />

        <TextView
            android:hint="Married"
            android:textSize="@dimen/list_item_text_size"
            android:id="@+id/text_profile_view_maritalStatus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/text_employee_blood_group"
            android:textSize="@dimen/list_item_text_size"
            android:layout_width="0dp"
            android:paddingRight="15dp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_weight="1.2" />

        <TextView
            android:hint="A+"
            android:textSize="@dimen/list_item_text_size"
            android:id="@+id/text_profile_view_bloodGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/text_employee_im"
            android:textSize="@dimen/list_item_text_size"
            android:layout_width="0dp"
            android:textStyle="bold"
            android:paddingRight="15dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2" />

        <TextView
            android:hint="Message"
            android:textSize="@dimen/list_item_text_size"
            android:id="@+id/text_profile_view_IM"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_weight="2" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/text_employee_religion"
            android:textSize="@dimen/list_item_text_size"
            android:layout_width="0dp"
            android:textStyle="bold"
            android:paddingRight="15dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2" />

        <TextView
            android:hint="Muslim"
            android:textSize="@dimen/list_item_text_size"
            android:id="@+id/text_profile_view_religion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/text_employee_mobile"
            android:textSize="@dimen/list_item_text_size"
            android:layout_width="0dp"
            android:textStyle="bold"
            android:paddingRight="15dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2" />

        <TextView
            android:hint="01833745635"
            android:textSize="@dimen/list_item_text_size"
            android:id="@+id/text_profile_view_mobile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_weight="2" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/text_employee_office_phone"
            android:textSize="@dimen/list_item_text_size"
            android:layout_width="0dp"
            android:textStyle="bold"
            android:paddingRight="15dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2" />

        <TextView
            android:hint="01763659873"
            android:textSize="@dimen/list_item_text_size"
            android:id="@+id/text_profile_view_officePhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/text_employee_email"
            android:textSize="@dimen/list_item_text_size"
            android:layout_width="0dp"
            android:textStyle="bold"
            android:paddingRight="15dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2" />

        <TextView
            android:hint="Mahmud@gmail.com"
            android:textSize="@dimen/list_item_text_size"
            android:id="@+id/text_profile_view_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_weight="2" />

    </LinearLayout>

</LinearLayout>

    </ScrollView>