<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.login.EditEmployeeAccount">

    <LinearLayout
        android:id="@+id/linear_layout_edit_account_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="0px"
            android:focusable="true"
            android:focusableInTouchMode="true" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_employee_name"
            android:textColor="@color/primary"
            android:nextFocusDown="@+id/edit_text_employeename_edit"
            android:id="@+id/employee_name_text" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_employeename_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.AppCompat"
            android:layout_marginBottom="@dimen/lists_title_bottom_margin"
            app:hintTextAppearance="@style/HintText">

            <EditText
                android:id="@+id/edit_text_employeename_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="@string/hint_enter_employeename"
                android:inputType="textCapWords"
                android:padding="@dimen/edit_text_padding"
                android:textColor="@color/black"
                android:nextFocusDown="@+id/employee_email_text"
                android:textColorHint="@color/dark_grey"
                android:textSize="@dimen/login_buttons_text_size" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_employee_institute"
            android:textColor="@color/primary"
            android:nextFocusDown="@+id/spinner_employee_institute"
            android:id="@+id/employee_institute_text" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_employee_institute_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.AppCompat"
            app:hintTextAppearance="@style/HintText"
            android:layout_marginBottom="@dimen/lists_title_bottom_margin">

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_employee_institute_edit"
                android:background="@android:color/white"
                android:padding="@dimen/edit_text_padding"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                android:nextFocusDown="@+id/employee_department_text"
                android:textSize="@dimen/login_buttons_text_size" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_employee_department"
            android:textColor="@color/primary"
            android:nextFocusDown="@+id/spinner_employee_department"
            android:id="@+id/employee_department_text" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_employee_depratment_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.AppCompat"
            app:hintTextAppearance="@style/HintText"
            android:layout_marginBottom="@dimen/lists_title_bottom_margin">

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_employee_department_edit"
                android:background="@android:color/white"
                android:padding="@dimen/edit_text_padding"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                android:textSize="@dimen/login_buttons_text_size" />

        </android.support.design.widget.TextInputLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_employee_email"
            android:textColor="@color/primary"
            android:nextFocusDown="@+id/edit_text_email_edit"
            android:id="@+id/employee_date_of_birth" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_date_of_birth_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.AppCompat"
            app:hintTextAppearance="@style/HintText"
            android:layout_marginBottom="@dimen/lists_title_bottom_margin">

            <EditText
                android:id="@+id/edit_text_date_of_birth_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="@string/hint_enter_date_of_birth"
                android:inputType="textEmailAddress"
                android:padding="@dimen/edit_text_padding"
                android:textColor="@color/black"
                android:nextFocusDown="@+id/employee_gender_text"
                android:textColorHint="@color/dark_grey"
                android:textSize="@dimen/login_buttons_text_size" />
        </android.support.design.widget.TextInputLayout>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_employee_gender"
            android:textColor="@color/primary"
            android:nextFocusDown="@+id/spinner_employee_gender"
            android:id="@+id/employee_gender_text" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_gender_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.AppCompat"
            app:hintTextAppearance="@style/HintText"
            android:layout_marginBottom="@dimen/lists_title_bottom_margin">

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_employee_gender_edit"
                android:background="@android:color/white"
                android:padding="@dimen/edit_text_padding"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                android:nextFocusDown="@+id/employee_institute_text"
                android:textSize="@dimen/login_buttons_text_size" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_employee_email"
            android:textColor="@color/primary"
            android:nextFocusDown="@+id/edit_text_email_edit"
            android:id="@+id/employee_email_text" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_email_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.AppCompat"
            app:hintTextAppearance="@style/HintText"
            android:layout_marginBottom="@dimen/lists_title_bottom_margin">

            <EditText
                android:id="@+id/edit_text_email_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="@string/hint_enter_email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/edit_text_padding"
                android:textColor="@color/black"
                android:nextFocusDown="@+id/employee_gender_text"
                android:textColorHint="@color/dark_grey"
                android:textSize="@dimen/login_buttons_text_size" />
        </android.support.design.widget.TextInputLayout>

        <!-- </LinearLayout>-->

        <Button
            android:id="@+id/btn_update_account_final"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_field_height"
            android:background="@color/primary"
            android:onClick="onUpdateAccountPressed"
            android:text="@string/title_activity_update_account"
            android:textColor="@android:color/white"
            android:textSize="@dimen/login_buttons_text_size" />


    </LinearLayout>
</ScrollView>